# iwtsp

./: .gitignore  Cargo.toml  GEMINI.md  README.md  jlrs-llms-full.txt  jlrs-llms.txt  opt.ipynb  opt.jl  rooc_docs.md
.cargo/: config.toml
context/: Dongetal_2024_Implied_Willow_Tree.md
context/matlab_impl/: DEPENDENCIES.md  IWT.md  IWT_DETAILED.md  OPTIMIZATION.md  README.md
opt/: main.py  pyproject.toml
src/: ad.rs  jl.rs  lib.rs  main.rs  real_tree.rs  tree.rs  wt.rs
